/Added responsive menu

--- a/css/master.css
+++ b/css/master.css
@@ -1,18 +1,24 @@
+* {
+      box-sizing: border-box;
+}
+
+
 html, body{
   margin : 0;
   padding: 0;
   height: 100%;
   width :100%;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .page-header{
   width: 100%;
-  height :  100vh;
+  height : 100%;
   background: url('../images/ash-edmonds-510566-unsplash.jpg');
   background-size: cover;
 }
 
-.page-header::after{
+/* .page-header::after{
   animation: grain 1s steps(10) infinite;
      background-image: url(../images/grains.png);
      content: "";
@@ -22,7 +28,8 @@ html, body{
      position: fixed;
      top: -110%;
      width: 300%;
-}
+     z-index: 1;
+} */
 
 @keyframes grain {
   0%, 100% { transform: translate(0, 0); }
@@ -38,21 +45,22 @@ html, body{
 }
 
 
-.container{
-  position: absolute;
-  top: 30%;
-  left: 44%;
-  transform: translate(-50%, -50%);
-  font-family: 'Montserrat', sans-serif;
+.container {
+
+  /* transform: translate(-50%, -50%); */
+
   font-weight: 300;
-  z-index: 1;
+  z-index: 1fff0;
   color: #fff;
+  margin: 0% 0% 10% 10%;
+  padding-top: 10%;
 }
 
 h1{
   font-family: 'Oswald', sans-serif;
+  margin-top: 0px;
   margin-bottom: 0;
-  color: #8300f7;
+  color: #d63869;
   letter-spacing: 2px;
   font-size: 50px;
 }
@@ -60,19 +68,20 @@ h1{
 p{
   width: 80%;
   font-weight: lighter;
+  color : #fff;
 }
 
 .btn{
   margin-top: 50px;
 }
 
-a{
+.btn a{
     text-decoration: none;
      color: #fff;
      letter-spacing: 2px;
      font-size: 12px;
      text-transform: uppercase;
-     border: 2px solid #8300f7;
+     border: 2px solid #d63869;
      padding: 16px 42px;
 }
 
@@ -86,4 +95,199 @@ a{
 
 .delay-3{
   animation-delay: 1.4s
+}
+
+nav {
+      padding: 8px;
+}
+
+.logo {
+      float: left;
+      padding: 8px;
+      margin-left: 16px;
+      margin-top: 8px;
+}
+
+.logo a {
+      color: #d63869;
+      text-transform: uppercase;
+      font-weight: 700;
+      font-size: 18px;
+      letter-spacing: 0px;
+      text-decoration: none;
+}
+
+nav ul {
+      float: right;
+}
+
+nav ul li {
+      display: inline-block;
+      float: left;
+}
+
+nav ul li:not(:first-child) {
+      margin-left: 48px;
+}
+
+nav ul li:last-child {
+      margin-right: 24px;
+}
+
+nav ul li a {
+      display: inline-block;
+      outline: none;
+      color: #d63869;
+      text-transform: uppercase;
+      text-decoration: none;
+      font-size: 14px;
+      letter-spacing: 1.2px;
+      font-weight: 600;
+}
+
+
+
+@media screen and (max-width:864px) {
+    .logo{
+        padding : 0;
+    }
+
+    p{
+        margin-left: : 0;
+    }
+
+    .container{
+        margin-left: 16px;
+    }
+    .nav-wrapper{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        background-color: rgba(54, 14, 126, 0.8);
+        opacity: 0;
+        transition: all 0.2s ease;
+    }
+
+    .nav-wrapper ul{
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        width:100%
+    }
+
+    .nav-wrapper ul li{
+        display : block;
+        float: none;
+        width: 100%;
+        text-align: right;
+        margin-bottom: 10px;
+    }
+
+    .nav-wrapper ul li:nth-child(1) a {
+            transition-delay: 0.2s;
+      }
+
+      .nav-wrapper ul li:nth-child(2) a {
+            transition-delay: 0.3s;
+      }
+
+      .nav-wrapper ul li:nth-child(3) a {
+            transition-delay: 0.4s;
+      }
+
+      .nav-wrapper ul li:nth-child(4) a {
+            transition-delay: 0.5s;
+      }
+
+      .nav-wrapper ul li:nth-child(5) a {
+            transition-delay: 0.6s;
+      }
+
+      .nav-wrapper ul li:not(:first-child) {
+            margin-left: 0;
+      }
+
+      .nav-wrapper ul li a{
+
+          padding: 10px 24px;
+            opacity: 0;
+            color: #d63869;
+            font-size: 14px;
+            font-weight: 600;
+            letter-spacing: 1.2px;
+            transform: translateX(-20px);
+            transition: all 0.2s ease;
+      }
+
+      .nav-btn {
+          position: fixed;
+          right: 10px;
+          top : 10px;
+          display: block;
+          width: 50px;
+          height: 50px;
+          cursor: pointer;
+          z-index: 99999;
+          border-radius: 50%;
+      }
+
+      .nav-btn i{
+          display: block;
+          width: 20px;
+          height: 2px;
+          background: #d63869;
+          border-radius: 2px;
+          margin-left: 14px;
+      }
+
+      .nav-btn i:nth-child(1){
+          margin-top: 4px;
+      }
+
+      .nav-btn i:nth-child(2){
+          margin-top: 4px;
+          opacity: 1;
+      }
+
+      .nav-btn i:nth-child(3){
+          margin-top: 4px;
+      }
+}
+
+#nav:checked + .nav-btn {
+      transform: rotate(45deg);
+}
+
+#nav:checked + .nav-btn i {
+      background: #d63869;
+      transition: transform 0.2s ease;
+}
+
+#nav:checked + .nav-btn i:nth-child(1) {
+      transform: translateY(6px) rotate(180deg);
+}
+
+#nav:checked + .nav-btn i:nth-child(2) {
+      opacity: 0;
+}
+
+#nav:checked + .nav-btn i:nth-child(3) {
+      transform: translateY(-6px) rotate(90deg);
+}
+
+#nav:checked ~ .nav-wrapper {
+      z-index: 9990;
+      opacity: 1;
+}
+
+#nav:checked ~ .nav-wrapper ul li a {
+      opacity: 1;
+      transform: translateX(0);
+}
+
+.hidden{
+    display: none;
 }
